ensure wrap is centered, add max-width

--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -1686,7 +1686,8 @@ h1, h2, h3, h4, h5, h6 { font-weight: normal;}
 	 ========================================================================== */
 /* use to set max width of content areas */
 .wrap {
-	margin: 0;
+	max-width: 1280px;
+	margin: 0 auto;
 	padding-left: $unit-default-px;
 	padding-left: 1rem;
 	padding-right: $unit-default-px;
